--- a/index.html
+++ b/index.html
@@ -3,7 +3,19 @@
 
     <head>
         <!-- Google Tag Manager -->
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async
+            src="https://www.googletagmanager.com/gtag/js?id=G-FC0XW04GV4%22%3E"></script>
         <script>
+            window.dataLayer = window.dataLayer || [];
+
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag('js', new Date());
+            gtag('config', 'G-FC0XW04GV4');
+        </script>
+        <!--    L'ancien google manager     <script>
             (function (w, d, s, l, i) {
                 w[l] = w[l] || [];
                 w[l].push({
@@ -17,8 +29,9 @@
                 j.src =
                     'https://www.googletagmanager.com/gtm.js?id=%27+i+dl;f.parentNode.insertBefore(j,f)';
             })(window, document, 'script', 'dataLayer', 'GTM-PNBXLDC');
-        </script>
-        <meta charset="UTF-8" />
+        </script> -->
+        <meta charset="
+            UTF-8" />
         <meta name="viewport"
             content="width=device-width, initial-scale=1" />
         <!-- <meta name="description"
@@ -68,6 +81,7 @@
             href="./public/touch-icon-ipad-retina.png" />
         <title>Escapee</title>
     </head>
+
     <body>
         <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PNBXLDC"
                 height="0"
@@ -75,171 +89,184 @@
                 style="display:none;visibility:hidden"></iframe></noscript>
         <header>
             <div class="logo">
-                <img src="./images/logo.svg" alt="Logo Escapee" />
+                <img src="./images/logo.svg"
+                    alt="Logo Escapee" />
             </div>
             <ul class="navbar">
-                <li class="close-navbar"><img src="/images/closeburger.svg" alt="closeNavbar"></li>
+                <li class="close-navbar"><img src="/images/closeburger.svg"
+                        alt="closeNavbar"></li>
                 <li><a href="#">Accueil</a></li>
                 <li><a href="#qui">Qui sommes-nous ?</a></li>
                 <li><a href="#voyage">Newsletter</a></li>
-                <li><a class="btn" href="#">Se connecter</a></li>
+                <li><a class="btn"
+                        href="#">Se connecter</a></li>
             </ul>
             <div class="burger">
-                <img class="open-navbar" src="/images/menubuger.svg" alt="burger menu">
+                <img class="open-navbar"
+                    src="/images/menubuger.svg"
+                    alt="burger menu">
             </div>
         </header>
-    
-    <main>
-        <section class="background">
-            <article>
-                <div class="title-header">
-                    <div>
-                        <h1>évadez-vous</h1>
-                    </div>
-                    <div>
-                        <h2>retrouvez-vous</h2>
-                    </div>
-                </div>
-                <div class="enquete">
-                    <p>Trouvez la destination de vos rêves grâce à vos critères ! <br>Répondez simplement à cette
-                        brève enquête.</p>
-                    <button class="btn btn-enquete">Notre enquête</button>
-                    
-                </div>
-                <div class="mouse">
-                    <div class="mouse-shape">
-                      <div class="mouse-animation"></div>
-                    </div>
-                  </div>  
-            </article>
-        </section>
-        <section>
-            <!-- Qui sommes-nous -->
-            <article id="qui" class="main-conteneur">
-                <h6 class="green left">QUI SOMMES-<span>NOUS</span></h6>
-                <div>
-                    <div class="conteneur-img img1">
-                    </div>
-                    <div class="text">
+
+        <main>
+            <section class="background">
+                <article>
+                    <div class="title-header">
                         <div>
-                            <p>
-                                Vous êtes à la recherche du lieu de repos idéal, où vous pourrez
-                                être
-                                tranquille ? Pour vous, les vacances s’apprécient seul, isolé,
-                                et visent
-                                à vous ressourcer ?
-                            </p>
-                            <p>
-                                <span class="green">Escapee</span> vous propose des voyages clés
-                                en
-                                main, avec une immersion
-                                garantie dans la nature, et l’assurance de la sérénité de votre
-                                séjour.
-                            </p>
+                            <h1>évadez-vous</h1>
+                        </div>
+                        <div>
+                            <h2>retrouvez-vous</h2>
                         </div>
                     </div>
-                </div>
+                    <div class="enquete">
+                        <p>Trouvez la destination de vos rêves grâce à vos critères ! <br>Répondez
+                            simplement à cette
+                            brève enquête.</p>
+                        <button class="btn btn-enquete">Notre enquête</button>
 
-            </article>
-            <!-- Vous accompagner -->
-            <article id="accompagnement" class="main-conteneur">
-                <h6 class="blue right"><span>VOUS </span >ACCOMPAGNER</h6>
-                <div>
-                    <div class="conteneur-img img2"></div>
-                    <div class="text">
-                        <div>
-                            <p>
-                                Que vous recherchiez la superbe villa d’un architecte de renom,
-                                ou alors une expérience en immersion totale dans la nature,
-                                <span class="green">Escapee</span> vous accompagne durant tout
-                                le processus.
-                            </p>
-                            <p>
-                                Du transport depuis votre domicile, jusqu’aux billets d’avion,
-                                sans évidemment oublier transports sur place, et même jusqu’à
-                                une conciergerie pour les destinations les plus reculées, vous
-                                n’êtes jamais laissés seuls, pour vous offrir l’expérience la
-                                plus complète et agréable !
-                            </p>
+                    </div>
+                    <div class="mouse">
+                        <div class="mouse-shape">
+                            <div class="mouse-animation"></div>
                         </div>
                     </div>
-                </div>
-
-            </article>
-            <!-- planifier votre voyages  -->
-            <article id="voyage" class="main-conteneur">
-                <h6 class="beige left">PLANIFIEZ <span>VOTRE</span> <br> VOYAGE</h6>
-                <div>
-                    <div class="conteneur-img img3"></div>
-                    <div class="text">
-                        <div>
-                            <p>
-                                Cette partie du site est à venir ! <br>
-                                Pour patienter, n’hésitez pas à vous inscrire à notre
-                                newsletter, afin d’être au courant de l’avancée des projets,
-                                ainsi que des nouveautés !
-                            </p>
-                            <div id="mc_embed_signup">
-                                <p id="result_news"
-                                    style="display: none;"></p>
-                                <form
-                                    action="https://Escapee.us9.list-manage.com/subscribe/post?u=8e71f96c5c933f5329444df27&amp;id=3ad5a89f21"
-                                    method="post"
-                                    id="mc-embedded-subscribe-form"
-                                    name="mc-embedded-subscribe-form"
-                                    class="validate"
-                                    target="_blank">
-                                    <div class="mc-field-group">
-                                        <input type="email"
-                                            value=""
-                                            name="EMAIL"
-                                            class="email"
-                                            id="mce-EMAIL"
-                                            placeholder="Votre adresse e-mail"
-                                            required>
-                                        <div style="position: absolute; left: -5000px;"
-                                            aria-hidden="true">
-                                            <input type="text"
-                                                name="b_8e71f96c5c933f5329444df27_3ad5a89f21"
-                                                tabindex="-1"
-                                                value="">
-                                        </div>
-                                        <button type="submit"
-                                            name="subscribe"
-                                            id="mc-embedded-subscribe"
-                                            class="btn">S'inscrire</button>
-                                        <div id="subscribe-result">
-                                        </div>
-                                    </div>
-                                </form>
+                </article>
+            </section>
+            <section>
+                <!-- Qui sommes-nous -->
+                <article id="qui"
+                    class="main-conteneur">
+                    <h6 class="green left">QUI SOMMES-<span>NOUS</span></h6>
+                    <div>
+                        <div class="conteneur-img img1">
+                        </div>
+                        <div class="text">
+                            <div>
+                                <p>
+                                    Vous êtes à la recherche du lieu de repos idéal, où vous pourrez
+                                    être
+                                    tranquille ? Pour vous, les vacances s’apprécient seul, isolé,
+                                    et visent
+                                    à vous ressourcer ?
+                                </p>
+                                <p>
+                                    <span class="green">Escapee</span> vous propose des voyages clés
+                                    en
+                                    main, avec une immersion
+                                    garantie dans la nature, et l’assurance de la sérénité de votre
+                                    séjour.
+                                </p>
                             </div>
                         </div>
                     </div>
-                </div>
-            </article>
-        </section>
-    </main>
-    <footer>
-        <div>
-            <ul>
-                <li><a href="#">Accueil</a></li>
-                <li><a href="#qui">Qui sommes-nous ?</a> </li>
-                <li><a href="#voyage">Newsletter</a> </li>
-                <li><a href="#">Compte</a> </li>
-            </ul>
-            <ul>
-                <li><a href=""><img src="#" alt="Instagram"></a> </li>
-                <li><a href="https://www.twitch.tv/escapee_travel"><img src="#" alt="Twitch"></a> </li>
-                <li><a href=""><img src="#" alt="Paanteon"></a> </li>
-            </ul>
+
+                </article>
+                <!-- Vous accompagner -->
+                <article id="accompagnement"
+                    class="main-conteneur">
+                    <h6 class="blue right"><span>VOUS </span>ACCOMPAGNER</h6>
+                    <div>
+                        <div class="conteneur-img img2"></div>
+                        <div class="text">
+                            <div>
+                                <p>
+                                    Que vous recherchiez la superbe villa d’un architecte de renom,
+                                    ou alors une expérience en immersion totale dans la nature,
+                                    <span class="green">Escapee</span> vous accompagne durant tout
+                                    le processus.
+                                </p>
+                                <p>
+                                    Du transport depuis votre domicile, jusqu’aux billets d’avion,
+                                    sans évidemment oublier transports sur place, et même jusqu’à
+                                    une conciergerie pour les destinations les plus reculées, vous
+                                    n’êtes jamais laissés seuls, pour vous offrir l’expérience la
+                                    plus complète et agréable !
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                </article>
+                <!-- planifier votre voyages  -->
+                <article id="voyage"
+                    class="main-conteneur">
+                    <h6 class="beige left">PLANIFIEZ <span>VOTRE</span> <br> VOYAGE</h6>
+                    <div>
+                        <div class="conteneur-img img3"></div>
+                        <div class="text">
+                            <div>
+                                <p>
+                                    Cette partie du site est à venir ! <br>
+                                    Pour patienter, n’hésitez pas à vous inscrire à notre
+                                    newsletter, afin d’être au courant de l’avancée des projets,
+                                    ainsi que des nouveautés !
+                                </p>
+                                <div id="mc_embed_signup">
+                                    <p id="result_news"
+                                        style="display: none;"></p>
+                                    <form
+                                        action="https://Escapee.us9.list-manage.com/subscribe/post?u=8e71f96c5c933f5329444df27&amp;id=3ad5a89f21"
+                                        method="post"
+                                        id="mc-embedded-subscribe-form"
+                                        name="mc-embedded-subscribe-form"
+                                        class="validate"
+                                        target="_blank">
+                                        <div class="mc-field-group">
+                                            <input type="email"
+                                                value=""
+                                                name="EMAIL"
+                                                class="email"
+                                                id="mce-EMAIL"
+                                                placeholder="Votre adresse e-mail"
+                                                required>
+                                            <div style="position: absolute; left: -5000px;"
+                                                aria-hidden="true">
+                                                <input type="text"
+                                                    name="b_8e71f96c5c933f5329444df27_3ad5a89f21"
+                                                    tabindex="-1"
+                                                    value="">
+                                            </div>
+                                            <button type="submit"
+                                                name="subscribe"
+                                                id="mc-embedded-subscribe"
+                                                class="btn">S'inscrire</button>
+                                            <div id="subscribe-result">
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+            </section>
+        </main>
+        <footer>
             <div>
-                <p>© Copyright 2022</p>
-                <p>
-                    <a href="privacy-policy.html">Mention légale, Politique de confidentialité</a>
-                </p>
+                <ul>
+                    <li><a href="#">Accueil</a></li>
+                    <li><a href="#qui">Qui sommes-nous ?</a> </li>
+                    <li><a href="#voyage">Newsletter</a> </li>
+                    <li><a href="#">Compte</a> </li>
+                </ul>
+                <ul>
+                    <li><a href=""><img src="#"
+                                alt="Instagram"></a> </li>
+                    <li><a href="https://www.twitch.tv/escapee_travel"><img src="#"
+                                alt="Twitch"></a> </li>
+                    <li><a href=""><img src="#"
+                                alt="Paanteon"></a> </li>
+                </ul>
+                <div>
+                    <p>© Copyright 2022</p>
+                    <p>
+                        <a href="privacy-policy.html">Mention légale, Politique de
+                            confidentialité</a>
+                    </p>
+                </div>
             </div>
-        </div>
-    </footer>
+        </footer>
         <script type='text/javascript'
             src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
         <script type='text/javascript'>
@@ -266,15 +293,21 @@
         <script type="module"
             src="./scripts/home.js"></script>
 
-    <div class="modal-form">
-        <a class="cross-form"><img src="/images/cross.svg"></a>
-        <iframe
-            src="https://docs.google.com/forms/d/e/1FAIpQLSdKmFwYompyt6iEDJMsa9quEIy9sZu5FJJDvkp3GLagzIIomw/viewform?embedded=true"
-            width="640" height="4564" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-    </div>
+        <div class="modal-form">
+            <a class="cross-form"><img src="/images/cross.svg"></a>
+            <iframe
+                src="https://docs.google.com/forms/d/e/1FAIpQLSdKmFwYompyt6iEDJMsa9quEIy9sZu5FJJDvkp3GLagzIIomw/viewform?embedded=true"
+                width="640"
+                height="4564"
+                frameborder="0"
+                marginheight="0"
+                marginwidth="0">Loading…</iframe>
+        </div>
 
-    <script type="module" src="./scripts/main.js"></script>
-    <script type="module" src="./scripts/home.js"></script>
-</body>
+        <script type="module"
+            src="./scripts/main.js"></script>
+        <script type="module"
+            src="./scripts/home.js"></script>
+    </body>
 
 </html>
