--- a/index.html
+++ b/index.html
@@ -3,27 +3,18 @@
 <head>
      <!-- Google Tag Manager -->
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async
-            src="https://www.googletagmanager.com/gtag/js?id=G-FC0XW04GV4%22%3E"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
+    <script async
+        src="https://www.googletagmanager.com/gtag/js?id=G-FC0XW04GV4%22%3E"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-            function gtag() {
-                dataLayer.push(arguments);
-            }
-            gtag('js', new Date());
-            gtag('config', 'G-FC0XW04GV4');
-        </script>
-    <!-- l'ancien Google Tag Manager 
-    <script>(function (w, d, s, l, i) {
-            w[l] = w[l] || []; w[l].push({
-                'gtm.start':
-                    new Date().getTime(), event: 'gtm.js'
-            }); var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-PNBXLDC');</script>
-    -->
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+        gtag('config', 'G-FC0XW04GV4');
+    </script>
+        <!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- <meta name="description"
@@ -46,6 +37,7 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="Cactus et vous" />
+    <link rel="stylesheet" href="https://use.typekit.net/zkf2zix.css">
 
     <link rel="icon" type="image/png" href="./public/icon-16x16.png" />
     <link rel="icon" type="image/png" href="./public/icon-32x32.png" />
