--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -38,6 +38,7 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="Cactus et vous" />
+    <link rel="stylesheet" href="https://use.typekit.net/zkf2zix.css">
 
     <link rel="icon" type="image/png" href="./public/icon-16x16.png" />
     <link rel="icon" type="image/png" href="./public/icon-32x32.png" />
