ajout id reseaux sociaux tag manager

--- a/index.html
+++ b/index.html
@@ -194,9 +194,10 @@
                 <li><a href="#">Compte</a> </li>
             </ul>
             <ul>
-                <li><a href="https://www.instagram.com/escapee_travel/"><img src="./images/insta.svg" alt="Instagram"></a> </li>
-                <li><a href="https://www.twitch.tv/escapee_travel"><img src="./images/twitch.svg" alt="Twitch"></a> </li>
-                <li><a href=""><img src="./images/paanteon.svg" alt="Paanteon"></a> </li>
+                <li><a id="insta" href="https://www.instagram.com/escapee_travel/"><img src="./images/insta.svg" alt="Instagram"></a> </li>
+                <li><a id="twitch" href="https://www.twitch.tv/escapee_travel"><img src="./images/twitch.svg" alt="Twitch"></a> </li>
+                <li><a id="tripadvisor" href=""><img src="./images/paanteon.svg" alt="Paanteon"></a> </li>
+                <li><a id="youtube" href="#"><img src="#" alt="Youtube"></a></li>
             </ul>
             <div>
                 <p>© Copyright 2022</p>
