--- a/index.html
+++ b/index.html
@@ -1,20 +1,16 @@
 <html lang="fr" id="home">
 
 <head>
-     <!-- Google Tag Manager -->
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async
-        src="https://www.googletagmanager.com/gtag/js?id=G-FC0XW04GV4%22%3E"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FC0XW04GV4"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
+        function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
+
         gtag('config', 'G-FC0XW04GV4');
     </script>
-        <!-- End Google Tag Manager -->
+    <!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- <meta name="description"
@@ -194,8 +190,10 @@
                 <li><a href="#">Compte</a> </li>
             </ul>
             <ul>
-                <li><a id="insta" href="https://www.instagram.com/escapee_travel/"><img src="./images/insta.svg" alt="Instagram"></a> </li>
-                <li><a id="twitch" href="https://www.twitch.tv/escapee_travel"><img src="./images/twitch.svg" alt="Twitch"></a> </li>
+                <li><a id="insta" href="https://www.instagram.com/escapee_travel/"><img src="./images/insta.svg"
+                            alt="Instagram"></a> </li>
+                <li><a id="twitch" href="https://www.twitch.tv/escapee_travel"><img src="./images/twitch.svg"
+                            alt="Twitch"></a> </li>
                 <li><a id="tripadvisor" href=""><img src="./images/paanteon.svg" alt="Paanteon"></a> </li>
                 <li><a id="youtube" href="#"><img src="#" alt="Youtube"></a></li>
             </ul>
