--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <html lang="fr" id="home">
 
 <head>
-    <!-- Google Tag Manager -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FC0XW04GV4%22%3E"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FC0XW04GV4"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
+        function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
+
         gtag('config', 'G-FC0XW04GV4');
     </script>
     <!-- End Google Tag Manager -->
