--- a/pages/connect.html
+++ b/pages/connect.html
@@ -9,25 +9,54 @@
 </head>
 
 <body>
-    <div id="login">
-        <div class="header">
-            <h1>Authentification</h1>
+    <div class="signIn-signUp-Container">
+        <div id="signIn">
+            <div class="header">
+                <h1>Sign IN</h1>
+            </div>
+            <form>
+                <div class="group">
+                    <input id="txtEmail" type="email">
+                    <label>Email</label>
+                </div>
+                <div class="group">
+                    <input id="txtPassword" type="password">
+                    <label>Password</label>
+                </div>
+                <div id="divLoginError" class="group">
+                    <div id="lblLoginErrorMessage" class="errorlabel">Error message</div>
+                </div>
+                <button id="btnLogin" type="button" class="button buttonBlue">Log in</button>
+            </form>
         </div>
-        <form>
-            <div class="group">
-                <input id="txtEmail" type="email">
-                <label>Email</label>
+        <div id="signUp">
+            <div class="header">
+                <h1>Sign UP</h1>
             </div>
-            <div class="group">
-                <input id="txtPassword" type="password">
-                <label>Password</label>
-            </div>
-            <div id="divLoginError" class="group">
-                <div id="lblLoginErrorMessage" class="errorlabel">Error message</div>
-            </div>
-            <button id="btnLogin" type="button" class="button buttonBlue">Log in</button>
-            <button id="btnSignup" type="button" class="button buttonBlue">Sign up</button>
-        </form>
+            <form>
+                <div class="group">
+                    <input id="txtFirstName" type="firstname">
+                    <label>First name</label>
+                </div>
+                <div class="group">
+                    <input id="txtLastName" type="lastname">
+                    <label>Last name</label>
+                </div>
+                <div class="group">
+                    <input id="txtEmailSignUp" type="email" required>
+                    <label>Email</label>
+                </div>
+                <div class="group">
+                    <input id="txtPasswordSignUp" type="password" required>
+                    <label>Password</label>
+                </div>
+                <div class="group">
+                    <input id="txtphoneNumber" type="tel">
+                    <label>Phone number</label>
+                </div>
+                <button id="btnSignup" type="submit" class="button buttonBlue">Sign up</button>
+            </form>
+        </div>
     </div>
     <div id="app">
         <div class="header">
@@ -42,8 +71,6 @@
     </div>
     <script type="module" src="../scripts/firebaseConfig.js"></script>
     <script type="module" src="../scripts/firebaseAuth.js"></script>
-    <script type="module" src="../scripts/main.js"></script>
-    <script type="module" src="../scripts/home.js"></script>
 </body>
 
 </html>
