[feature] auth + link to db collection + admin system done

--- a/pages/connect.html
+++ b/pages/connect.html
@@ -51,10 +51,10 @@
                     <label>Password</label>
                 </div>
                 <div class="group">
-                    <input id="txtphoneNumber" type="tel">
+                    <input id="txtPhoneNumber" type="tel">
                     <label>Phone number</label>
                 </div>
-                <button id="btnSignup" type="submit" class="button buttonBlue">Sign up</button>
+                <button id="btnSignup" type="button" class="button buttonBlue">Sign up</button>
             </form>
         </div>
     </div>
