[feature] update blog

--- a/pages/addArticles.html
+++ b/pages/addArticles.html
@@ -18,7 +18,8 @@
             <input id="title-article" type="text" alt="Name Article">
             <textarea id="synopsis-article" type="text" alt="Content Article"></textarea>
             <div id="content"></div>
-            <input id="file" type="file" name="file">
+            <input type="file" id="image-input" accept="image/jpeg, image/png, image/jpg">
+            <div id="display-image"></div>
             <button id="save-button">Save</button>
         </div>
     </main>
