[style] add sémantic

--- a/index.html
+++ b/index.html
@@ -49,43 +49,120 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PNBXLDC" height="0" width="0"
             style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    <!-- <header>
-        <div class="logo">
-            <img src="./images/logo.svg" alt="Logo Escapee" />
-        </div>
-        <ul class="navbar">
-            <li class="close-navbar"><img src="/images/closeburger.svg" alt="closeNavbar"></li>
-            <li><a href="#">Accueil</a></li>
-            <li><a href="#qui">Qui sommes-nous ?</a></li>
-            <li><a href="#voyage">Newsletter</a></li>
-            <li><a class="btn" href="#">Se connecter</a></li>
-        </ul>
-        <div class="burger">
-            <img class="open-navbar" src="/images/menubuger.svg" alt="burger menu">
-        </div>
-    </header> -->
-    <!-- <div id="mc_embed_signup">
-                                <p id="result_news" style="display: none;"></p>
-                                <form
-                                    action="https://Escapee.us9.list-manage.com/subscribe/post?u=8e71f96c5c933f5329444df27&amp;id=3ad5a89f21"
-                                    method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
-                                    class="validate" target="_blank">
-                                    <div class="mc-field-group">
-                                        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL"
-                                            placeholder="Votre adresse e-mail" required>
-                                        <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                                            <input type="text" name="b_8e71f96c5c933f5329444df27_3ad5a89f21"
-                                                tabindex="-1" value="">
-                                        </div>
-                                        <button type="submit" name="subscribe" id="mc-embedded-subscribe"
-                                            class="btn">S'inscrire</button>
-                                        <div id="subscribe-result">
-                                        </div>
-                                    </form>
+    <header class="header-container">
+        <h1 class="logo-container">
+            <img class="logo" src="./images/logo.svg">
+        </h1>
+        <nav>
+            <ul class="nav-container">
+                <li>Créer votre expérience</li>
+                <li>le blog</li>
+                <li class="profil">profil</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <article>
+                <h2>Reconnectez-vous au monde qui vous entoure.</h2>
+                <p>Voyagez à votre façon et venez vivre une expérience qui vous ressemble.</p>
+                <button>Créez votre expérience</button>
+            </article>
+        </section>
+        <section>
+            <article>
+                <img src="" alt="">
+                <div>
+                    <h2>Nous nous engageons pour votre bien-être</h2>
+                    <p>Notre priorité est de vous permettre de vous évader dans les meilleures conditions possibles.
+                        Nous
+                        avons à coeur de vous
+                        apporter une expérience de voyage exceptionnelle, personnalisée en fonction de vos attentes,
+                        pour
+                        pouvoir vous trouver
+                        en vous retrouvant avec votre meilleur compagnon : vous-même.</p>
+                    <button>En savoir plus</button>
+                </div>
+            </article>
+            <article>
+                <h2>Évadez-vous
+                    retrouvez-vous</h2>
+                <img src="" alt="">
+            </article>
+        </section>
+        <section>
+            <h2>iLS PARLENT DE NOUS</h2>
+            <article>
+                <canvas>
+                    <!--3D globe -->
+                </canvas>
+                <div>
+                    <h3></h3>
+                    <p><span><a href=""></a></span></p>
+                    <div><span></span> <span></span> <span></span> <span></span> <span></span></div>
+                </div>
+            </article>
+        </section>
+        <section>
+            <div><img src="" alt="">
+                <span>560 personnes en phase</span>
+            </div>
+            <div><img src="" alt="">
+                <span>325 créateurs de liens</span>
+            </div>
+            <div><img src="" alt="">
+                <span>1015 rencontres</span>
+            </div>
+            <div><img src="" alt="">
+                <span>455 natures découvertes</span>
+            </div>
+        </section>
+        <section>
+            <h2>La une du Blog</h2>
+            <!--CAROUSEL of articles => blog -->
+            <button>acceder au blog</button>
+        </section>
+        <section>
+            <article>
+                <div>
+                    <h2>Newsletter</h2>
+                    <p>Permettez-vous d’explorer de nouveaux horizons en rejoignant notre communauté. Vous serez tenu au
+                        courant des avancées
+                        du projets Escapee, recevrez des offres expectionnelles, découvrirez nos nouvelles
+                        fonctionnalités en exclusivité, afin
+                        de ne jamais rater l’occasion de vous évader.</p>
+
+
+
+                    <div id="mc_embed_signup">
+                        <p id="result_news" style="display: none;"></p>
+                        <form
+                            action="https://Escapee.us9.list-manage.com/subscribe/post?u=8e71f96c5c933f5329444df27&amp;id=3ad5a89f21"
+                            method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+                            class="validate" target="_blank">
+                            <div class="mc-field-group">
+                                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL"
+                                    placeholder="Votre adresse e-mail" required>
+                                <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                                    <input type="text" name="b_8e71f96c5c933f5329444df27_3ad    5a89f21" tabindex="-1"
+                                        value="">
                                 </div>
-                            </div> -->
+                                <button type="submit" name="subscribe" id="mc-embedded-subscribe"
+                                    class="btn">S'inscrire</button>
+                                <div id="subscribe-result">
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </article>
+        </section>
 
-
+    </main>
 
     <!-- <footer>
         <div>
@@ -111,7 +188,49 @@
             </div>
         </div>
     </footer> -->
-    <!-- <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- <div id="mc_embed_signup">
+                                <p id="result_news" style="display: none;"></p>
+                                <form
+                                    action="https://Escapee.us9.list-manage.com/subscribe/post?u=8e71f96c5c933f5329444df27&amp;id=3ad5a89f21"
+                                    method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+                                    class="validate" target="_blank">
+                                    <div class="mc-field-group">
+                                        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL"
+                                            placeholder="Votre adresse e-mail" required>
+                                        <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                                            <input type="text" name="b_8e71f96c5c933f5329444df27_3ad5a89f21"
+                                                tabindex="-1" value="">
+                                        </div>
+                                        <button type="submit" name="subscribe" id="mc-embedded-subscribe"
+                                            class="btn">S'inscrire</button>
+                                        <div id="subscribe-result">
+                                        </div>
+                                    </form>
+                                </div>
+                            </div> -->
+
+
+
+
+    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
     <script type='text/javascript'>
         (function ($) {
             window.fnames = new Array();
@@ -130,7 +249,7 @@
             ftypes[5] = 'birthday';
         }(jQuery));
         var $mcj = jQuery.noConflict(true);
-    </script> -->
+    </script>
     <script type="module" src="./scripts/firebaseConfig.js"></script>
     <script type="module" src="./scripts/main.js"></script>
     <script type="module" src="./scripts/home.js"></script>
